<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp">
        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text_view_stock_label"
            android:layout_below="@id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_label"/>
        <TextView
            android:id="@+id/text_view_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_view_stock_label"
            android:layout_below="@id/text_view_name" />
        <TextView
            android:id="@+id/text_view_price"
            android:layout_below="@id/text_view_name"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_view_price_label"
            android:layout_below="@id/text_view_name"
            android:layout_toLeftOf="@id/text_view_price"
            android:layout_toRightOf="@id/text_view_stock_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/price_label"/>

    </RelativeLayout>
    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:focusable="false"
        android:textColor="#fff"
        android:text="@string/button_sale"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

</LinearLayout>